task/LP-2942 - task/LP-3059  - fix contrast color accessibility issue on a link

--- a/Beis.LearningPlatform.Web/wwwroot/scss/main.scss
+++ b/Beis.LearningPlatform.Web/wwwroot/scss/main.scss
@@ -1053,3 +1053,7 @@ span.govuk-link-divider {
     border-bottom: 10px solid $beis-yellow;
     margin: 0 15px;
 }
+
+.beis-yellow summary.govuk-details__summary {
+    color: $beis-navy-blue;
+}
